--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "merge-stream": "^1.0.1",
     "minimist": "^1.2.0",
     "string-template": "^1.0.0",
-    "through2-filter": "^2.0.0",
-    "through2-map": "^3.0.0"
+    "through2-filter": "^2.0.0"
   },
   "devDependencies": {
     "tap": "^8.0.1"
